[package]
name = "communiqué"
version = "0.1.0"
authors = ["Sam Whited <sam@samwhited.com>"]
license = "BSD-2-Clause"
description = "A modern XMPP client with a GTK3+ UI."
homepage = "https://mellium.im"
repository = "https://bitbucket.org/mellium/yokel.git"
readme = "README.md"
keywords = ["chat", "xmpp", "jabber"]

[dependencies]
gdk = "0.7"
gdk-pixbuf = "0.3"
gio = "0.3"
glib = "0.4"
lazy_static = "1.0.0"
pango = "0.3"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dependencies.gtk]
version = "0.3"
features = ["v3_16"]
