[package]
name = "communiqué"
version = "0.1.0"
authors = ["Sam Whited <sam@samwhited.com>"]
license = "BSD-2-Clause"
description = "A modern XMPP client with a GTK3+ UI."
homepage = "https://mellium.im"
repository = "https://bitbucket.org/mellium/yokel.git"
readme = "README.md"
keywords = ["chat", "xmpp", "jabber"]

[dependencies]
cairo-rs = "0.4"
gdk = "0.8"
gdk-pixbuf = "0.4"
gio = "0.4"
glib = "0.5"
lazy_static = "1.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
unicode-segmentation = "1.2"

[dependencies.gtk]
version = "0.4"
features = ["v3_16"]
